!3167 refactor(#I5ODMQ): remove shadow css from Collapse compoent * refactor: 折叠组件移除 shadow 样式 * fix: 修复失败的单元测试

--- a/src/BootstrapBlazor/Components/Collapse/Collapse.css
+++ b/src/BootstrapBlazor/Components/Collapse/Collapse.css
@@ -1,4 +1,8 @@
-﻿.accordion-button:not(.collapsed) {
+﻿.accordion {
+    --bs-accordion-btn-focus-box-shadow: none;
+}
+
+.accordion-button:not(.collapsed) {
     box-shadow: inset 0 -1px 0 #00000020;
 }
 
